--- a/src/main/resources/templates/anime-details.html
+++ b/src/main/resources/templates/anime-details.html
@@ -1,76 +1,20 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://thymeleaf.org">
+<html lang="en"
+      xmlns:th="http://thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout}">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <title>Anime create</title>
-    <style>
-        /**/
-        .sign-in-link {
-            margin-right: 20px;
-        }
-        .left-div {
-            width: 70%;
-            float: left;
-            padding: 20px;
-        }
-
-
-        .navbar-nav .nav-item {
-            margin-right: 10px;
-        }
-
-        .right-div {
-            width: 30%;
-            float: left;
-            padding: 20px;
-            text-align: center;
-        }
-        .anime-details-image {
-            width: 300px;
-            height: 400px;
-        }
-    </style>
 </head>
 <body>
-<header class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">
-        <div style="width: 50px; height: 50px; background-color: #ccc;"></div> <!-- to-do заменить на реальное лого -->
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="/animes">Top 100</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Latest</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">My anime</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Discussions</a>
-            </li>
-        </ul>
+<section layout:fragment="body">
+    <div class="left-div">
+        <h1 th:text="${anime.title}"></h1>
+        <p th:text="${anime.description}"></p>
     </div>
-
-    <div class="ml-auto">
-        <p class="my-2 my-lg-0 sign-in-link"><a href="#">Sign In</a></p>
+    <div class="right-div">
+        <img th:src="${anime.imageUrl}" alt="Anime Image" class="anime-details-image">
     </div>
-</header>
-
-<div class="left-div">
-    <h1 th:text="${anime.title}"></h1>
-    <p th:text="${anime.description}"></p>
-</div>
-
-<div class="right-div">
-    <img th:src="${anime.imageUrl}" alt="Anime Image" class="anime-details-image">
-</div>
-
+</section>
 </body>
 </html>
