--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -1,10 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html
+    xmlns:th="http://www.thymeleaf.org"
+    xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<head th:fragment="header">
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link th:href="@{/css/styles.css}" rel="stylesheet" />
+    <title layout:title-pattern="$CONTENT_TITLE - $LAYOUT_TITLE">RunGroop</title>
 </head>
-<body>
+<header class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">
+        <div style="width: 50px; height: 50px; background-color: #ccc;"></div> <!-- to-do заменить на реальное лого -->
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="/animes">Top 100</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Latest</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">My anime</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Discussions</a>
+            </li>
+        </ul>
+    </div>
 
-</body>
+    <div class="ml-auto">
+        <p class="my-2 my-lg-0 sign-in-link"><a href="#">Sign In</a></p>
+    </div>
+</header>
+<body layout:fragment="body"></body>
 </html>
