--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -52,6 +52,10 @@
 .anime-name {
     font-size: 24px;
     font-weight: bold;
+    color: black;
+}
+.anime-name:hover {
+    color: black;
 }
 
 .anime-description {
