--- a/src/main/resources/templates/anime-details.html
+++ b/src/main/resources/templates/anime-details.html
@@ -11,6 +11,7 @@
     <div class="left-div">
         <h1 th:text="${anime.title}"></h1>
         <p th:text="${anime.description}"></p>
+        <a th:href="@{/animes/{animeId}/delete(animeId=${anime.id})}" class="anime-link">Delete</a>
     </div>
     <div class="right-div">
         <img th:src="${anime.imageUrl}" alt="Anime Image" class="anime-details-image">
