--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -22,6 +22,9 @@
                 <a class="nav-link" href="/animes">Top 100</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="/animes/new">Add an anime</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="#">Latest</a>
             </li>
             <li class="nav-item">
