genre crud functions

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -25,6 +25,9 @@
                 <a class="nav-link" href="/animes/new">Add an anime</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="/genres">Genres</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="#">Latest</a>
             </li>
             <li class="nav-item">
