--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -66,3 +66,17 @@
 .anime-link {
     margin-right: 20px;
 }
+.genre-name{
+    font-size: 24px;
+    color: black;
+    margin-right: 10px;
+}
+.genre-delete{
+    font-size: 24px;
+}
+.genre-add-label{
+    font-size: 24px;
+}
+.genre-add-button{
+    margin-bottom: 10px;
+}
