--- a/src/main/resources/templates/anime-edit.html
+++ b/src/main/resources/templates/anime-edit.html
@@ -4,7 +4,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout}">
 <head>
-  <title>Anime create</title>
+  <title>Anime editing</title>
 </head>
 <body>
 <section layout:fragment="body">
